examples/test/testpolicy2004.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2004
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key46: value37
      key1: value10
      key42: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value20
          key39: value37
          key8: value0
      podSelector:
        matchLabels:
          key4: value6
